<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeMessageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/welcome_message_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/currentLocationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/current_location_message"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/newLocationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/selected_location_message"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/location_instruction"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_setCurrentLocation"
                style="@style/Widget.Material3.Button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:fontFamily="sans-serif"
                android:text="@string/button_use_location"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_selectNewLocation"
                style="@style/Widget.Material3.Button"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/button_use_new_location"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>