<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id = "@id/homeFragment"
        android:icon = "@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id = "@id/weatherFragment"
        android:icon="@drawable/baseline_cloud_24"
        android:title="@string/title_weather" />

    <item
        android:id = "@id/placesFragment"
        android:icon="@drawable/baseline_place_24"
        android:title="@string/title_places" />

    <item
        android:id="@id/mapFragment"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@id/itineraryFragment"
        android:icon="@drawable/baseline_edit_note_24"
        android:title="@string/title_itinerary" />

</menu>