<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateItineraryFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/itineraryCreateMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/itinerary_create"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/itineraryForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/itinerarySetTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itinerary_create_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/itineraryTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/itinerary_create_title_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/itinerarySetStartingLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itinerary_create_starting_location"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/itineraryStartingLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/itinerary_create_starting_location_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/itinerarySetPlan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itinerary_create_plan"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/itineraryPlan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/itinerary_create_plan_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/itinerarySetNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itinerary_create_notes"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/itineraryNotes"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/itinerary_create_notes_hint"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_saveCreatedItinerary"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/button_save_itinerary"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_backFromCreateItinerary"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/st_patricks_blue"
            android:fontFamily="sans-serif"
            android:text="@string/button_itinerary_back"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>